attack sim adjustments, mme export monster summons length

--- a/clsMonsterAttackSim.cls
+++ b/clsMonsterAttackSim.cls
@@ -26,6 +26,7 @@ Private m_nAtkChance(0 To 4) As Integer
 Private m_nAtkSuccess(0 To 4) As Integer
 Private m_nAtkHitSpellMin(0 To 4) As Integer
 Private m_nAtkHitSpellMax(0 To 4) As Integer
+Private m_sAtkHitSpellName(0 To 4) As String
 Private m_nAtkResist(0 To 4) As Integer
 Private m_nAtkMRdmgResist(0 To 4) As Integer
 Private m_nAtkDuration(0 To 4) As Integer
@@ -36,10 +37,10 @@ Private m_nStatAtkDmgResisted(0 To 4) As Currency
 Private m_nStatAtkAttemptDodgedOrResisted(0 To 4) As Currency
 Private m_nStatAtkTotalDamage(0 To 4) As Currency
 
-Private m_nUserAC As Integer
-Private m_nUserDR As Integer
-Private m_nUserDodge As Integer
-Private m_nUserMR As Integer
+Private m_nUserAC As Long
+Private m_nUserDR As Long
+Private m_nUserDodge As Long
+Private m_nUserMR As Long
 Private m_nUserAntiMagic As Integer
 
 Private m_nEnergyPerRound As Integer
@@ -49,6 +50,7 @@ Private m_nTotalDamage As Currency
 Private m_nMaxRoundDamage As Currency
 Private m_nAverageDamage As Currency
 Private m_nMaxEnergyPerRound As Long
+Private m_bHideEnergyInfo As Boolean
 
 Private m_bDynamicCalc As Boolean
 Private m_nDynamicCalcDifference As Currency
@@ -80,6 +82,14 @@ Private nActiveBetweenSpells_Ticks(0 To 4) As Integer
 Private nActiveBetweenSpells_DurationLeft(0 To 4) As Currency
 Private nActiveBetweenSpells_Value(0 To 4) As Integer
 Private nActiveBetweenSpells_ValueOriginal(0 To 4) As Integer
+
+Public Property Let bHideEnergyInfo(ByVal vData As Boolean)
+    m_bHideEnergyInfo = vData
+End Property
+
+Public Property Get bHideEnergyInfo() As Boolean
+    bHideEnergyInfo = m_bHideEnergyInfo
+End Property
 
 Public Property Let bCombatLogMaxRoundOnly(ByVal vData As Boolean)
     m_bCombatLogMaxRoundOnly = vData
@@ -217,6 +227,11 @@ Private Sub AddToCombatLog(sLeft As String, Optional sRight As String = "")
 On Error GoTo error:
 
 If nCombatLogRoundCount >= m_nCombatLogMaxRounds Then Exit Sub
+
+If m_bHideEnergyInfo Then
+    If InStr(1, sRight, "Energy", vbTextCompare) > 0 Then sRight = ""
+End If
+
 If Len(sRight) > 0 And Len(sLeft) > 29 Then
     sLeft = Mid(sLeft, 1, 26) & "..."
 End If
@@ -233,7 +248,7 @@ End Sub
 
 Public Function GetMaxDamage()
 Dim x As Integer, bNothingToSim As Boolean
-Dim nAttack As Integer, nAttempt As Integer
+Dim nAttack As Integer
 Dim nLeastEnergyUsed As Long, nLowestCostAttack As Long, nLowEnergy As Long
 Dim nMaxEnergyRound As Long, nMaxCostAttack As Long
 Dim nDamage As Long, nMaxDamage As Long, nMaxAttempts As Integer, nMaxDPE As Currency
@@ -311,7 +326,7 @@ Do While nEnergyRemaining >= nLowestCostAttack And x <= 6
                 nMaxAttempts = Fix(nEnergyRemaining / m_nAtkEnergy(nAttack))
                 If nMaxAttempts > (6 - x + 1) Then nMaxAttempts = (6 - x + 1)
                 
-                nDamagePerEnergy = (nDamage * nMaxAttempts) / (nEnergyRemaining / m_nAtkEnergy(nAttack))
+                nDamagePerEnergy = (nDamage * nMaxAttempts) / nEnergyRemaining
                 If nDamagePerEnergy > nMaxDPE Then
                     nMaxDamage = nDamage
                     nMaxDPE = nDamagePerEnergy
@@ -364,14 +379,14 @@ End Function
 Public Sub RunSim()
 Dim nRound As Long, nAttempt As Integer, nAttack As Integer, x As Integer
 Dim nRemainingEnergy As Long, nEnergyUsed As Integer, bShowHitSpell As Boolean
-Dim nUserMR_Adj As Integer, nDR_DamageResisted As Currency, nMR_Reduction As Currency
+Dim nDR_DamageResisted As Currency, nMR_Reduction As Currency
 Dim bAttackHit As Boolean, bDodged As Boolean, bGlanced As Boolean, bResisted As Boolean
 Dim nLastAttackType As Integer, nLastAttackEnergy As Integer, nAttack_AdjSuccessChance As Currency
 Dim nRoll_AttackChance As Integer, nRoll_HitChance As Integer, nRoll_DodgeChance As Integer
 Dim nDamage As Currency, nHitSpellDamage As Currency, nRoundDamage As Long, nOriginalDamage As Currency
 Dim bSepShown As Boolean, bDurSpellApplied As Boolean, bNothingToSim As Boolean
 Dim nCurrentAverageDamage As Currency, nDifference As Currency, nDynamicRoundCount As Long
-Dim sMaxRoundCombatLog As String
+Dim sMaxRoundCombatLog As String, sHitSpellName As String
 On Error GoTo error:
 
 Randomize
@@ -438,7 +453,8 @@ For nRound = 1 To m_nNumberOfRounds
                     Call AddToCombatLog("[" & m_sAtkName(x) & ", spell tick] for " & nActiveAtkSpells_Value(x) _
                         & " -- " & nActiveAtkSpells_DurationLeft(x) & " rounds rem.")
                 Else
-                    Call AddToCombatLog("[attack " & (x + 1) & ", hit spell tick] for " & nActiveAtkSpells_Value(x) _
+                    sHitSpellName = IIf(Len(m_sAtkHitSpellName(x)) = 0, "attack " & (x + 1), m_sAtkHitSpellName(x))
+                    Call AddToCombatLog("[" & sHitSpellName & ", hit spell tick] for " & nActiveAtkSpells_Value(x) _
                         & " -- " & nActiveAtkSpells_DurationLeft(x) & " rounds rem.")
                 End If
                 
@@ -475,8 +491,12 @@ For nRound = 1 To m_nNumberOfRounds
         bSepShown = False
     End If
     
-    Call AddToCombatLog("ROUND " & nRound & " / Energy: " _
-        & nRemainingEnergy & " + " & m_nEnergyPerRound & " = " & (nRemainingEnergy + m_nEnergyPerRound))
+    If m_bHideEnergyInfo Then
+        Call AddToCombatLog("ROUND " & nRound)
+    Else
+        Call AddToCombatLog("ROUND " & nRound & " / Energy: " _
+            & nRemainingEnergy & " + " & m_nEnergyPerRound & " = " & (nRemainingEnergy + m_nEnergyPerRound))
+    End If
     Call AddToCombatLog("")
     
     nRemainingEnergy = nRemainingEnergy + m_nEnergyPerRound
@@ -687,7 +707,8 @@ For nRound = 1 To m_nNumberOfRounds
                                 If bDurSpellApplied Then
                                     Call AddToCombatLog(" - duration spell applied (" & nActiveAtkSpells_Value(nAttack) & ")")
                                 Else
-                                    Call AddToCombatLog(" - hit spell " & IIf(bResisted, "(resist)", "for " & Round(nHitSpellDamage)))
+                                    sHitSpellName = IIf(Len(m_sAtkHitSpellName(nAttack)) = 0, "attack " & (x + 1), m_sAtkHitSpellName(nAttack))
+                                    Call AddToCombatLog(" -" & sHitSpellName & " " & IIf(bResisted, "(resist)", "for " & Round(nHitSpellDamage)))
                                 End If
                             End If
                         End If
@@ -818,7 +839,8 @@ duration_ticks:
                 Call AddToCombatLog("[" & m_sAtkName(x) & ", attack spell tick] for " & nActiveAtkSpells_Value(x) _
                     & " -- " & nActiveAtkSpells_DurationLeft(x) & " rounds rem.")
             Else
-                Call AddToCombatLog("[attack " & (x + 1) & ", hit spell tick] for " & nActiveAtkSpells_Value(x) _
+                sHitSpellName = IIf(Len(m_sAtkHitSpellName(x)) = 0, "attack " & (x + 1), m_sAtkHitSpellName(x))
+                Call AddToCombatLog("[" & sHitSpellName & ", hit spell tick] for " & nActiveAtkSpells_Value(x) _
                     & " -- " & nActiveAtkSpells_DurationLeft(x) & " rounds rem.")
             End If
             
@@ -1343,8 +1365,17 @@ Public Property Get sAtkName(ByVal Index As Integer) As String
     sAtkName = m_sAtkName(Index)
 End Property
 
+Public Property Let sAtkHitSpellName(ByVal Index As Integer, ByVal vData As String)
+    m_sAtkHitSpellName(Index) = vData
+End Property
+
+Public Property Get sAtkHitSpellName(ByVal Index As Integer) As String
+    sAtkHitSpellName = m_sAtkHitSpellName(Index)
+End Property
+
 Private Sub Class_Initialize()
 m_nCombatLogMaxRounds = 10
 m_nDynamicCalcDifference = 0.0001
 Randomize
 End Sub
+
